SigmaCodebackup3rdSep/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>Sending Mail to the Vendor through workflow</description>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Subscription_Interval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Subscription Interval</label>
        <referenceTo>Account_Subscription_Intervals__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Recevied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Recevied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>Used For Mobile Payment Point of Sales</description>
        <inlineHelpText>Used For Mobile Payment Point of Sales</inlineHelpText>
        <label>Bank_Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Person__c</fullName>
        <label>Billing_Person</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Id__c</fullName>
        <label>Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Date__c</fullName>
        <label>Cheque_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_Number__c</fullName>
        <description>Used For Mobie Payment Point of Sales</description>
        <label>Cheque_Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_CardNumber__c</fullName>
        <description>Used For Mobie Payment Point of Sales</description>
        <label>Credit_CardNumber</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Used For Mobie Payment Point of Sales</description>
        <label>Customer_Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used For Mobile Payment Point of Sales</description>
        <label>Customer_SFID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments (Customer_SFID)</relationshipLabel>
        <relationshipName>Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <formula>Amount__c - Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federal_Tax__c</fullName>
        <description>Used For Mobile Payment Point of Sales</description>
        <label>Federal_Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Refund_Date_Time__c</fullName>
        <label>Last Refund Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments (Merchant Account)</relationshipLabel>
        <relationshipName>Payments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used For  Mobile Payment  Point of sales.to be used for Email Receipt.</description>
        <label>OrderId</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderSoupEntryId__c</fullName>
        <description>Used For Mobile Payment Point of Sales</description>
        <label>OrderSoupEntryId</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Created_Via__c</fullName>
        <label>Order_Created_Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web Order</fullName>
                    <default>true</default>
                    <label>Web Order</label>
                </value>
                <value>
                    <fullName>M-POS</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Online(Web Order)
Offline(M-Pos,Pos)</description>
        <label>Order_Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                    <default>true</default>
                    <label>Online</label>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments (Parent Account)</relationshipLabel>
        <relationshipName>Payments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayPal_Customer_Id__c</fullName>
        <externalId>true</externalId>
        <label>PayPal Customer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayPal_Response__c</fullName>
        <label>PayPal Response</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayPal_Transaction_Id__c</fullName>
        <label>PayPal Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay request</label>
        <referenceTo>Payment_Request_Response_QS__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentIdForSoup__c</fullName>
        <description>Used For Mobile Payment Point of Sales</description>
        <label>PaymentIdForSoup</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Error__c</fullName>
        <label>Payment Error</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Id__c</fullName>
        <label>Payment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment_Mode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Time__c</fullName>
        <label>Payment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QS_Customer_Id__c</fullName>
        <externalId>true</externalId>
        <label>QS Customer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiptNumber__c</fullName>
        <description>Used For Mobile Payment Point of Sales</description>
        <label>ReceiptNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Charge_Id__c</fullName>
        <label>Refund Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Transaction_Id__c</fullName>
        <label>Refund Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Tax__c</fullName>
        <description>Used For Mobile Payment Point of Sales</description>
        <label>State_Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Partial Refund</fullName>
                </value>
                <value>
                    <fullName>Partial Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stripe_Transaction_Id__c</fullName>
        <label>Stripe_Transaction_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <description>Used For Mobile Payment Point of Sales</description>
        <label>Tax_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenID__c</fullName>
        <description>Used For Mobile Payment Point of Sales</description>
        <label>TokenID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>soupEntryId__c</fullName>
        <description>Used For Mobile Payment Point of Sales</description>
        <label>soupEntryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>Pay-{0000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>